--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Yasemin Anne</title>
+  <title>Website</title>
 </head>
 
 <body>
@@ -11,7 +11,7 @@
     <tr>
       <td> <img src=" images/CV foto.png " alt="Yasemin profile picture"> </td>
       <td>
-        <h1> Yasemin Anne Verwer</h1>
+        <h1> Hello</h1>
         <p> <em> <strong><a href=https://www.udemy.com/course/the-complete-web-development-bootcamp />Web dev course</a> </strong></em> </p>
         <p> Lorem opsum dolor sit amet legendos sea.
           Mei dolor saepe munere. Pri ut eros ludus,</p>
